# agent-watcher

./: README.md  pyproject.toml
.github/workflows/: refresh-public-traces.yml  review-agentic-setup.yml  scan-watched-repos.yml  validate.yml
config/: targets.json  trace_targets.json
docs/: design.md
public-traces/: README.md
public-traces/repos/EBISPOT/efo/: README.md  manifest.json
public-traces/repos/ai4curation/ai-gene-review/: README.md  manifest.json
public-traces/repos/geneontology/go-ontology/: README.md  manifest.json
public-traces/repos/monarch-initiative/dismech/: README.md
public-traces/repos/monarch-initiative/mondo/: README.md  manifest.json
public-traces/repos/obophenotype/cell-ontology/: README.md  manifest.json
public-traces/repos/obophenotype/uberon/: README.md  manifest.json
public-traces/traces/EBISPOT/efo/copilot/: index.json
public-traces/traces/EBISPOT/efo/dragon-prs/: index.json
public-traces/traces/ai4curation/ai-gene-review/copilot/: index.json
scripts/: prepare_public_traces.py  run_setup_review.py  run_watch.py  select_targets.py
skills/gh-trace-miner/: SKILL.md
skills/gh-trace-miner/agents/: openai.yaml
skills/gh-trace-miner/scripts/: mine_action_job_history.py  mine_copilot_traces.py  mine_dragon_pr_traces.py  mine_traces.py
src/agent_watcher/: __init__.py  cli.py  config.py  github_api.py  models.py  publisher.py  reporting.py  scheduling.py  setup_review.py  watcher.py
tests/: test_config.py  test_github_api.py  test_prepare_public_traces.py  test_scheduling.py  test_setup_review.py  test_watcher.py
(+18569 files in other folders)
